--- a/JAVA/BD/nbproject/project.properties
+++ b/JAVA/BD/nbproject/project.properties
@@ -30,18 +30,18 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.bson-3.9.1.jar=src/bd/bson-3.9.1.jar
-file.reference.jdbc.jar=src/jdbc.jar
+file.reference.jdbc.jar=C:\\Users\\Filipe Universidade\\Documents\\NetBeansProjects\\BD\\src\\bd\\jdbc.jar
 file.reference.mongodb-driver-3.9.1.jar=src/bd/mongodb-driver-3.9.1.jar
 file.reference.mongodb-driver-core-3.9.1.jar=src/bd/mongodb-driver-core-3.9.1.jar
-file.reference.mysql-connector-java-8.0.12.jar=src/mysql-connector-java-8.0.12.jar
+file.reference.mysql-connector-java-8.0.12.jar=C:\\Users\\Filipe Universidade\\Documents\\NetBeansProjects\\BD\\src\\bd\\mysql-connector-java-8.0.12.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jdbc.jar}:\
     ${file.reference.mysql-connector-java-8.0.12.jar}:\
     ${file.reference.mongodb-driver-3.9.1.jar}:\
     ${file.reference.mongodb-driver-core-3.9.1.jar}:\
-    ${file.reference.bson-3.9.1.jar}
+    ${file.reference.bson-3.9.1.jar}:\
+    ${file.reference.jdbc.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
