--- a/JAVA/BD/nbproject/private/private.properties
+++ b/JAVA/BD/nbproject/private/private.properties
@@ -2,6 +2,8 @@ application.args=-verbose className.java
 compile.on.save=true
 do.depend=false
 do.jar=true
+file.reference.jdbc.jar=C:\\UM\\BD\\BaseDeDados\\JAVA\\BD\\src\\bd\\jdbc.jar
+file.reference.mysql-connector-java-8.0.12.jar=C:\\UM\\BD\\BaseDeDados\\JAVA\\BD\\src\\bd\\mysql-connector-java-8.0.12.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Filipe Universidade\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Ryzon\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
